--- a/ProfileProject/wwwroot/css/ProfileStyle.css
+++ b/ProfileProject/wwwroot/css/ProfileStyle.css
@@ -1,27 +1,11 @@
-﻿#background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-/*    flex-basis: auto;
-    flex-grow: 1;*/
-
-    background-color: #F3C623;
-    opacity: 1;
-    background: radial-gradient(circle, transparent 20%, #F3C623 20%, #F3C623 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #F3C623 20%, #F3C623 80%, transparent 80%, transparent) 100px 100px, linear-gradient(#383838 8px, transparent 8px) 0 -4px, linear-gradient(90deg, #383838 8px, #F3C623 8px) -4px 0;
-    background-size: 200px 200px, 200px 200px, 100px 100px, 100px 100px;
-}
-
-#profile-container {
+﻿#profile-container {
     position: relative;
     width: 90%;
-    height: 100%;
+    height: auto;
     
     display: flex;
     flex-direction: column;
-    margin: 50px;
     flex: 1;
-    flex-basis: 100%;
 
     top: 45px;
     z-index: 1;
@@ -32,6 +16,7 @@
 #head > div {
     display: flex;
     flex-direction: row;
+    flex: 1;
     margin: 25px 25px 0px 25px;
 }
 
@@ -45,8 +30,8 @@
 
 #head > div > img {
     box-sizing: border-box;
-    height: 100%;
-    width: auto;
+    height: auto;
+    width: 256px;
     border: solid #FFB22C 4px;
 }
 
@@ -87,14 +72,55 @@
     word-break: break-all;
     border-top: solid #FFB22C 2px;
     display: -webkit-box;
-    -webkit-line-clamp: 4; /* Ограничивает 3 строками */
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
 #posts {
-    height: 5000px;
+    height: auto;
     flex-grow: 1;
+}
+
+#profile-nav {
+    margin: 15px 15px 0px 15px;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: row;
+    /*    X-axis and Y-axis*/
+    justify-content: space-between;
+    align-items: center;
+    border: solid 4px #FA812F;
+    border-radius: 15px;
+}
+
+#profile-nav > div {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+#profile-nav > div > a {
+    width: 90px;
+    height: 30px;
+    background-color: white;
+    border: solid 2px #FFB22C;
+    border-radius: 5px;
+    display: flex;
+    /*    X-axis and Y-axis*/
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+}
+
+#profile-nav > div > a:hover {
+    background-color: #FEF3E2;
+}
+
+#profile-nav > div > a:active {
+    background-color: #FA812F;
 }
 
 .comic-relief-regular {
