--- a/ProfileProject/Areas/Profile/Views/Profile/GetByUsername.cshtml
+++ b/ProfileProject/Areas/Profile/Views/Profile/GetByUsername.cshtml
@@ -1,36 +1,60 @@
 ﻿@model ProfileProject.Models.ProfileViewModel;
+@inject IWebHostEnvironment env;
+@{
+	string placeholder = System.IO.Path.Combine("PFPs", "placeholder.png");
+}
 
-@section Styles {
+@section Styles 
+{
 <link href="~/css/ProfileStyle.css" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap" rel="stylesheet">
+
+
 }
 
-<div id="background"></div>
 
-<div id="connector">
-	<div id="profile-container">
-		<div id="head">
-			<div id="margin">	
-				<img src="@Model.PFPath" />
-				<div id="name-and-shit">
-					<p id="username" class="comic-relief-bold">@Model.Username</p>
+<div id="profile-container">
+	<div id="head">
+		<div id="margin">	
+			@if(System.IO.Path.Exists(System.IO.Path.Combine(env.WebRootPath, "Profile", Model.PFPath))) 
+			{ 
+				<img src="@Model.PFPath" /> 
+			}
+			else
+			{
+				<img src="@placeholder" />
+			}
+			<div id="name-and-shit">
+				<p id="username" class="comic-relief-bold">@Model.Username</p>
 
-					@if(Model.Age > 16)
-					{
-						<p id="age" class="comic-relief-regular">@Model.Age years old</p>
-					}
+				@if(Model.Age >= 16 && Model.ShowAge)
+				{
+					<p id="age" class="comic-relief-regular">@Model.Age years old</p>
+				}
 
-					<p id="date" class="comic-relief-regular">Here since: @Model.CreationDate</p>
+				<p id="date" class="comic-relief-regular">Here since: @Model.CreationDate</p>
 
-					<p id="bio" class="comic-relief-regular">@Model.Bio</p>
-				</div>
+				<p id="bio" class="comic-relief-regular">@Model.Bio</p>
 			</div>
 		</div>
-		<div id="posts">
-
+	</div>
+	<div id="posts">
+		<div id="profile-nav">
+			<div id="posts-control">
+				<a asp-controller="profile" asp-action="posts/create"><span class="material-icons">add</span></a>
+				<a><span class="material-icons">refresh</span></a>
+			</div>
+			@if(Model.IsAllowedToEdit == true)
+			{
+				<div id="account-control">
+					<a asp-controller="profile" asp-action="edit" asp-route-username="@Model.Username"><span class="material-icons">settings</span></a>
+				</div>
+			}
 		</div>
 	</div>
 </div>
