--- a/ProfileProject/Areas/API/Views/Shared/_Layout.cshtml
+++ b/ProfileProject/Areas/API/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <header id="navbar">
         <ul id="ul-pages">
             <li><a class="cal-sans-regular" asp-controller="" asp-action="">Main Page</a></li>
-            <li><a class="cal-sans-regular" asp-controller="profile" asp-action="search">Search</a></li>
+            <li><a class="cal-sans-regular" asp-controller="" asp-action="">Search</a></li>
         </ul>
         <ul id="ul-tools">
             @if(signInManager.IsSignedIn(User))
