rename, main page

--- a/ProfileProject/Areas/Profile/Views/Shared/_Layout.cshtml
+++ b/ProfileProject/Areas/Profile/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <body>
     <header id="navbar">
         <ul id="ul-pages">
-            <li><a class="cal-sans-regular" asp-controller="" asp-action="">Main Page</a></li>
+            <li><a class="cal-sans-regular" href="/">Main Page</a></li>
             <li><a class="cal-sans-regular" asp-controller="profile" asp-action="search">Search</a></li>
         </ul>
         <ul id="ul-tools">
